--- a/server/config.env
+++ b/server/config.env
@@ -1,2 +1,4 @@
+// temp password and account
+// will be deleted later
 ATLAS_URI=mongodb+srv://katiadeo:AC9jtfg6rsk2TYJH@cluster0.mxhpe.mongodb.net/cardsDatabase?retryWrites=true&w=majority
 PORT=5500
